# catool

./: README.md  pyproject.toml
catool/: .gitignore  __init__.py  __main__.py  inou.py  main.py  metrics.py  onto.py  pyproject.toml  utils.py
catool/conversion/: mapper.py
