[tool.poetry]
name = "catool"
version = "0.1.0"
description = ""
authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.6"
numba = "^0.51"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
