[tool.poetry]
name = "catool"
version = "0.1.99"
description = ""
authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numba = "^0.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
